--- a/index.html
+++ b/index.html
@@ -4,8 +4,58 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+  <header class="top-navigation">
+    <div class="content">
+      <ul class="links">
+        <li><a class="active" href="">Meet Karma</a></li>
+        <li><a href="#">How it Works</a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+      <img class="logo" src="images/karma-logo.svg" alt="Karma" width="26px">
+    </div>
+  </header>
+  <section class="introduction">
+    <div class="content">
+      <h1>Introducing Karma</h1>
+      <h3>Bring WiFi with you, everywhere you go.</h3>
+      <div class="big-button">
+        <button>Learn More</button>
+      </div>
+    </div>
+  </section>
+  <section class="cases">
+    <div class="content">
+      <h2>Everyone needs a little Karma</h2>
+      <ul class="devices">
+        <li>
+          <img width="127px" height="127px" src="images/icon-devices.svg" alt="Internet for all devices image">
+          <div class="caption">Internet for all devices</div>
+        </li>
+        <li>
+          <img width="127px" height="127px" src="images/icon-coffee.svg" alt="Boost your productivity image">
+          <div class="caption">Boost your productivity</div>
+        </li>
+        <li>
+          <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
+          <div class="caption">Pay as You Go</div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <footer>
+    <h5>Join us on</h5>
+    <ul class="social">
+      <li class="twitter"><a href="">Twitter</a></li>
+      <li class="facebook"><a href="">Facebook</a></li>
+      <li class="instagram"><a href="">Instagram</a></li>
+    </ul>
+    <span class="copyright">© Karma Mobility, Inc.</span>
+  </footer>
 </body>
 </html>
