--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <header class="top-navigation">
@@ -24,38 +26,43 @@
     <div class="content">
       <h1>Introducing Karma</h1>
       <h3>Bring WiFi with you, everywhere you go.</h3>
-      <div class="big-button">
-        <button>Learn More</button>
+      <div class="buttons">
+        <button class="big-button">Learn More</button>
       </div>
     </div>
   </section>
   <section class="cases">
     <div class="content">
       <h2>Everyone needs a little Karma</h2>
-      <ul class="devices">
+      <ul class="devices group">
         <li>
           <img width="127px" height="127px" src="images/icon-devices.svg" alt="Internet for all devices image">
-          <div class="caption">Internet for all devices</div>
-        </li>
+          <div class="caption">
+            <h3>Internet for all devices</h3>
+          </div>
         <li>
           <img width="127px" height="127px" src="images/icon-coffee.svg" alt="Boost your productivity image">
-          <div class="caption">Boost your productivity</div>
-        </li>
+          <div class="caption">
+            <h3>Boost your productivity</h3>
+          </div>
         <li>
           <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
-          <div class="caption">Pay as You Go</div>
-        </li>
+          <div class="caption">
+            <h3>Pay as You Go</h3>
+          </div>
       </ul>
     </div>
   </section>
   <footer>
-    <h5>Join us on</h5>
-    <ul class="social">
-      <li class="twitter"><a href="">Twitter</a></li>
-      <li class="facebook"><a href="">Facebook</a></li>
-      <li class="instagram"><a href="">Instagram</a></li>
-    </ul>
-    <span class="copyright">© Karma Mobility, Inc.</span>
-  </footer>
+    <div class="content">
+      <hr>
+      <h5>Join us on</h5>
+      <ul class="social">
+        <li class="twitter"><a href=""><i class="fa fa-twitter"></i></a>
+        <li class="facebook"><a href=""><i class="fa fa-facebook"></i></a>
+        <li class="instagram"><a href=""><i class="fa fa-instagram"></i></a>
+      </ul>
+      <span class="copyright">© Karma Mobility, Inc.</span>
+    </footer>
 </body>
 </html>
